# src/route/types.ts
@@ -7,8 +7,6 @@ export const ROUTE_VERSION_1 = "v1";
  * and then discriminating on the success property
  */
 
-const RESPONSE_AUTH_TYPE_FIELD = "success";
-
 // 1. Define the specific schemas first
 export const GENERIC_SUCCESS_RESPONSE_SCHEMA = z.object({
 	success: z.literal(true),
@@ -20,12 +18,16 @@ export const GENERIC_ERROR_RESPONSE_SCHEMA = z.object({
 	error: z.string(),
 });
 
+export const ERROR_401_RESPONSE_SCHEMA = GENERIC_ERROR_RESPONSE_SCHEMA.extend({
+	error: z.literal("Unauthorized"),
+});
+
 export const ERROR_404_RESPONSE_SCHEMA = GENERIC_ERROR_RESPONSE_SCHEMA.extend({
 	error: z.literal("Resource not found"),
 });
 
-// 2. Build the discriminated union from the specific schemas
-export const GENERIC_RESPONSE_SCHEMA = z.discriminatedUnion(
-	RESPONSE_AUTH_TYPE_FIELD,
-	[GENERIC_SUCCESS_RESPONSE_SCHEMA, GENERIC_ERROR_RESPONSE_SCHEMA],
-);
+// // 2. Build the discriminated union from the specific schemas
+// export const GENERIC_RESPONSE_SCHEMA = z.discriminatedUnion(
+// 	RESPONSE_AUTH_TYPE_FIELD,
+// 	[GENERIC_SUCCESS_RESPONSE_SCHEMA, GENERIC_ERROR_RESPONSE_SCHEMA],
+// );
